--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "mysql": "^2.10.2",
     "serve-favicon": "~2.3.0"
   }
 }
