--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/brandon-charest/LingoLynx#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -24,6 +25,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
+    "q": "^1.4.1",
     "serve-favicon": "~2.3.0"
   }
 }
