--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "elasticsearch": "^10.1.3",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
