--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
+    "config": "^1.19.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "elasticsearch": "^10.1.3",
@@ -27,6 +28,7 @@
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "q": "^1.4.1",
+    "redis": "^2.4.2",
     "serve-favicon": "~2.3.0"
   }
 }
