--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "elasticsearch": "^10.1.3",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^5.5.4",
     "morgan": "~1.6.1",
     "mysql": "^2.10.2",
     "q": "^1.4.1",
