--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/jshint . --reporter=./node_modules/jshint-full-path/index.js",
+    "pretest": "npm run-script lint",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec -r should",
+    "posttest": "./node_modules/.bin/istanbul check-coverage && rm -rf coverage"
   },
   "repository": {
     "type": "git",
@@ -31,5 +34,12 @@
     "q": "^1.4.1",
     "redis": "^2.4.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.2",
+    "jshint": "^2.9.1",
+    "jshint-full-path": "^1.1.1",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   }
 }
